# xor_crypt

./: .clangd  .gitignore  README.md  compile_commands.json  conanfile.py  meson.build  pad.key
src/: main.cpp  main.test.cpp  version.cpp  version.hpp  version.hpp.in  version.test.cpp
